Finish Add exp, Add rev

--- a/app/src/main/res/layout/add_exp_activity.xml
+++ b/app/src/main/res/layout/add_exp_activity.xml
@@ -37,6 +37,7 @@
                 android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:backgroundTint="@color/white"
+                android:entries="@array/Choose"
                 android:theme="@style/spinners_style" />
 
             <TextView
