--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,13 @@
         <item name="android:textColor">@color/alice_blue</item>
         <item name="android:textSize">25sp</item>
         <item name="android:textStyle">bold</item>
+            <item name="android:paddingLeft">0dp</item>
+            <item name="android:dropDownWidth">533dp</item>
+            <item name="android:showDividers">none</item>
+            <item name="android:dividerHeight">0dp</item>
+            <item name="android:dropDownHeight">70dp</item>
+            <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
+            <item name="android:dropDownSelector">@android:color/white</item>
     </style>
 
     <style name="buttons_login_style">
