--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,242 +7,228 @@
     android:background="@color/bright_gray"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout4"
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:textAlignment="gravity"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayout4"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="38dp"
-            android:layout_marginBottom="12dp"
-            android:gravity="center"
-            android:paddingTop="30dp"
-            android:text="@string/quotation"
-            android:textColor="@color/jacarta"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:gravity="top"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:textAlignment="gravity">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="3dp"
-                android:layout_marginBottom="26dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textView13"
-                app:srcCompat="@drawable/main_drawable_top" />
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center"
-                android:layout_marginEnd="30dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/income_during_the_month"
-                    android:textColor="@color/head_filed_color"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/fixedIncome"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="monospace"
-                    android:layout_gravity="center"
-                    android:paddingTop="10dp"
-                    android:textColor="@color/jacarta"
-                    android:textSize="30sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
-                android:layout_marginStart="50dp"
-                android:orientation="vertical">
+                android:layout_height="252dp"
+                app:srcCompat="@drawable/main_money" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/remainder_of_the_income"
-                android:textColor="@color/head_filed_color"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/cash"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="monospace"
-                android:paddingTop="10dp"
+                android:layout_marginStart="38dp"
+                android:layout_marginBottom="12dp"
+                android:gravity="center"
+                android:text="@string/quotation"
                 android:textColor="@color/jacarta"
-                android:textSize="30sp" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="26dp"
-                android:fontFamily="sans-serif-thin"
-                android:text="|"
-                android:textColor="@color/jacarta"
-                android:textSize="150sp" />
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="127dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/light_silver_p"
-                />
-
-            <TextView
-                android:id="@+id/mainSumAddInc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="19dp"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="monospace"
-                android:text="0.0"
-                android:textColor="@color/head_filed_color"
-                android:textSize="30sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center"
-                android:layout_marginEnd="34dp"
-                android:text="@string/your_extra_income"
-                android:textColor="@color/head_filed_color"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
-        </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="30dp"
-            android:layout_height="wrap_content">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="409dp"
+                android:layout_marginTop="20dp">
 
-            <ImageView
-                android:layout_width="180dp"
-                android:layout_height="190dp"
-                android:layout_gravity="left|center"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/main_drawable" />
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="320dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:srcCompat="@drawable/main_blue"
+                    tools:layout_editor_absoluteY="53dp"
+                    tools:ignore="MissingConstraints" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_gravity="left|center"
-                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="200dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center|right|top"
+                    android:layout_weight="1"
+                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/main_drawable" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:textDirection="rtl"
-                android:layout_gravity="center"
-                android:text="@string/your_extra_income"
-                android:textColor="@color/bright_gray"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/sumAdditionIncome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="monospace"
-                android:layout_gravity="center"
-                android:paddingTop="20dp"
-                android:text="0.0"
-                android:textColor="@color/bright_gray"
-                android:textSize="30sp" />
+                <LinearLayout
+                    android:id="@+id/linearLayout5"
+                    android:layout_width="170dp"
+                    android:layout_height="77dp"
+                    android:layout_margin="30dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/mainSumAddInc2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left|center"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:fontFamily="monospace"
+                        android:text="0.0"
+                        android:textColor="@color/light_silver"
+                        android:textSize="30sp" />
 
-            <ImageView
-                android:layout_width="180dp"
-                android:layout_height="190dp"
-                android:layout_gravity="right|center"
-                android:layout_margin="10dp"
-                app:srcCompat="@drawable/main_drawable" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|center"
+                        android:layout_marginStart="20dp"
+                        android:text="الدخل الثابت"
+                        android:textColor="@color/light_silver"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center"
-                android:layout_marginEnd="50dp"
-                android:orientation="vertical">
+                </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textDirection="rtl"
-                    android:text="@string/monthly_expenses"
-                    android:textColor="@color/bright_gray"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="397dp"
+                    android:layout_height="316dp"
+                    android:layout_marginTop="41dp"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/imageView2">
 
-                <TextView
-                    android:id="@+id/sumExpOnThisMonth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:fontFamily="monospace"
-                    android:layout_gravity="center"
-                    android:text="0.0"
-                    android:textColor="@color/bright_gray"
-                    android:textSize="30sp" />
-            </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:id="@+id/mainSumAddInc3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left|center"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="100dp"
+                            android:layout_marginBottom="16dp"
+                            android:fontFamily="monospace"
+                            android:text="0.0"
+                            android:textColor="@color/head_filed_color"
+                            android:textSize="30sp" />
 
-        </FrameLayout>
-    </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="40dp"
+                            android:text="الكاش"
+                            android:textColor="@color/head_filed_color"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/mainSumAddInc4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left|center"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="40dp"
+                            android:layout_marginBottom="16dp"
+                            android:fontFamily="monospace"
+                            android:text="0.0"
+                            android:textColor="@color/head_filed_color"
+                            android:textSize="30sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center"
+                            android:layout_marginStart="50dp"
+                            android:text="مجموع إيراداتك"
+                            android:textColor="@color/head_filed_color"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/mainSumAddInc"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left|center"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="35dp"
+                            android:layout_marginBottom="16dp"
+                            android:fontFamily="monospace"
+                            android:text="0.0"
+                            android:textColor="@color/head_filed_color"
+                            android:textSize="30sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center"
+                            android:layout_marginStart="50dp"
+                            android:text="مجموع مصاريفك"
+                            android:textColor="@color/head_filed_color"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="wrap_content"
         android:layout_height="110dp"
+        android:layout_marginTop="736dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/scrollView2">
 
 
         <com.google.android.material.bottomappbar.BottomAppBar
