--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,10 @@
     <color name="champagne">#F5E3D2</color>
     <color name="jacarta">#362360</color>
     <color name="rose_pink">#C35E9E</color>
-    <color name="vista_blue">#84A6D3</color>
+    <color name="vista_blue">#84A0C1</color>
     <color name="alice_blue">#84A6D3</color>
     <color name="head_filed_color">#2F3363</color>
     <color name="place_holder_color">#a2a4b5</color>
+    <color name="sky_blue">#b5bfff</color>
     <color name="red">#ed1c24</color>
 </resources>
