Add Recycler view

--- a/app/src/main/res/layout/define_activity.xml
+++ b/app/src/main/res/layout/define_activity.xml
@@ -39,7 +39,7 @@
 
             <TextView
                 style="@style/label_fields_style"
-                android:text="نوع الحساب" />
+                android:text="@string/AccountType" />
 
             <Spinner
                 android:id="@+id/AccountType"
