--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/main_blue"
-                    tools:layout_editor_absoluteY="53dp"
-                    tools:ignore="MissingConstraints" />
+                    tools:ignore="MissingConstraints"
+                    tools:layout_editor_absoluteY="53dp" />
 
                 <ImageView
                     android:id="@+id/imageView3"
@@ -82,14 +82,13 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/mainSumAddInc2"
+                        android:id="@+id/fixedIncome"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left|center"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
                         android:fontFamily="monospace"
-                        android:text="0.0"
                         android:textColor="@color/light_silver"
                         android:textSize="30sp" />
 
@@ -124,7 +123,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/mainSumAddInc3"
+                            android:id="@+id/cash"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left|center"
@@ -132,7 +131,6 @@
                             android:layout_marginEnd="100dp"
                             android:layout_marginBottom="16dp"
                             android:fontFamily="monospace"
-                            android:text="0.0"
                             android:textColor="@color/head_filed_color"
                             android:textSize="30sp" />
 
@@ -157,7 +155,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                android:id="@+id/sumRev"
+                            android:id="@+id/sumRev"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left|center"
@@ -165,7 +163,6 @@
                             android:layout_marginEnd="40dp"
                             android:layout_marginBottom="16dp"
                             android:fontFamily="monospace"
-                android:text="0.0"
                             android:textColor="@color/head_filed_color"
                             android:textSize="30sp" />
 
@@ -189,7 +186,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/mainSumAddInc"
+                            android:id="@+id/sumExp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left|center"
@@ -197,7 +194,6 @@
                             android:layout_marginEnd="35dp"
                             android:layout_marginBottom="16dp"
                             android:fontFamily="monospace"
-                            android:text="0.0"
                             android:textColor="@color/head_filed_color"
                             android:textSize="30sp" />
 
@@ -224,11 +220,9 @@
         android:id="@+id/coordinatorLayout"
         android:layout_width="wrap_content"
         android:layout_height="110dp"
-        android:layout_marginTop="736dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/scrollView2">
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <com.google.android.material.bottomappbar.BottomAppBar
@@ -379,6 +373,5 @@
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
