--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,11 +51,14 @@
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="320dp"
+                    android:layout_marginTop="52dp"
+                    android:layout_marginBottom="37dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/main_blue"
-                    tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteY="53dp" />
+                    tools:ignore="MissingConstraints" />
 
                 <ImageView
                     android:id="@+id/imageView3"
@@ -220,6 +223,7 @@
         android:id="@+id/coordinatorLayout"
         android:layout_width="wrap_content"
         android:layout_height="110dp"
+        android:layout_marginTop="736dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
