--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,53 +44,42 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="409dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp">
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="320dp"
-                    android:layout_marginTop="52dp"
-                    android:layout_marginBottom="37dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="40dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/main_blue"
                     tools:ignore="MissingConstraints" />
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="80dp"
-                    android:layout_gravity="center|right|top"
-                    android:layout_weight="1"
-                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/main_drawable" />
+                    app:srcCompat="@drawable/main_drawable"
+                    tools:ignore="MissingConstraints"
+                    tools:layout_editor_absoluteX="120dp" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout5"
-                    android:layout_width="170dp"
-                    android:layout_height="77dp"
+                    android:layout_width="250dp"
+                    android:layout_height="80dp"
                     android:layout_margin="30dp"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    tools:layout_editor_absoluteX="120dp"
+                    tools:ignore="MissingConstraints">
 
                     <TextView
                         android:id="@+id/fixedIncome"
                         android:layout_width="wrap_content"
+                        android:maxWidth="120dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="left|center"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="16dp"
                         android:fontFamily="monospace"
                         android:textColor="@color/light_silver"
                         android:textSize="30sp" />
@@ -99,8 +88,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right|center"
-                        android:layout_marginStart="20dp"
                         android:text="الدخل الثابت"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/light_silver"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -109,14 +98,13 @@
 
                 <LinearLayout
                     android:id="@+id/linearLayout3"
-                    android:layout_width="397dp"
-                    android:layout_height="316dp"
-                    android:layout_marginTop="41dp"
+                    android:layout_width="match_parent"
+                    android:paddingLeft="60dp"
+                    android:layout_height="320dp"
+                    android:layout_marginTop="70dp"
+                    app:layout_constraintTop_toTopOf="parent"
                     android:orientation="vertical"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/imageView2">
+                    tools:ignore="MissingConstraints">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -128,10 +116,11 @@
                         <TextView
                             android:id="@+id/cash"
                             android:layout_width="wrap_content"
+                            android:maxWidth="120dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left|center"
                             android:layout_marginTop="16dp"
-                            android:layout_marginEnd="100dp"
+                            android:layout_marginEnd="80dp"
                             android:layout_marginBottom="16dp"
                             android:fontFamily="monospace"
                             android:textColor="@color/head_filed_color"
@@ -141,7 +130,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right|center"
-                            android:layout_marginStart="20dp"
                             android:layout_marginEnd="40dp"
                             android:text="الكاش"
                             android:textColor="@color/head_filed_color"
@@ -160,10 +148,10 @@
                         <TextView
                             android:id="@+id/sumRev"
                             android:layout_width="wrap_content"
+                            android:maxWidth="120dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left|center"
                             android:layout_marginTop="16dp"
-                            android:layout_marginEnd="40dp"
                             android:layout_marginBottom="16dp"
                             android:fontFamily="monospace"
                             android:textColor="@color/head_filed_color"
@@ -191,10 +179,9 @@
                         <TextView
                             android:id="@+id/sumExp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:maxWidth="120dp"                            android:layout_height="wrap_content"
                             android:layout_gravity="left|center"
                             android:layout_marginTop="16dp"
-                            android:layout_marginEnd="35dp"
                             android:layout_marginBottom="16dp"
                             android:fontFamily="monospace"
                             android:textColor="@color/head_filed_color"
