--- a/app/src/main/res/layout/months_activity.xml
+++ b/app/src/main/res/layout/months_activity.xml
@@ -66,6 +66,7 @@
                 android:backgroundTint="@color/white"
                 android:entries="@array/months"
                 android:theme="@style/spinners_style"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -84,7 +85,7 @@
                 android:id="@+id/AccountType"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:layout_marginEnd="135dp"
+                android:layout_marginEnd="155dp"
                 android:backgroundTint="@color/white"
                 android:entries="@array/account_type"
                 android:theme="@style/spinners_style"
@@ -107,7 +108,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:gravity="center"
-            android:textColor="@color/jacarta"
+            android:textColor="@color/light_silver"
             android:textSize="28sp" />
 
         <androidx.recyclerview.widget.RecyclerView
